2009-03-05  John Millikin  <jmillikin@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusIcon.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusButton.cs:
	Use an animated image, rather than a button *containing* an animated
	image, for the task status icon (BGO #574298).
	
	* src/Clients/Nereid/Nereid/PlayerInterface.cs:
	* src/Core/Banshee.ThickClient/Makefile.am:
	Rename TaskStatusButton to TaskStatusIcon.

2009-03-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Fix
	parameter order for the SourcePreferences action entry.

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	Move misplaced SourcePreferences menu item.

2009-03-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Preferences.Gui/DefaultPreferenceWidgets.cs:
	* src/Core/Banshee.Services/Banshee.Library/MusicLibrarySource.cs: Move
	the folder selector into its own section, add a new misc section, and
	override the label for the new SourcePreferences action. Add the
	music-library prefs that were defined in PreferenceService.

	* src/Core/Banshee.Services/Banshee.Preferences/PreferenceService.cs: Name
	the file-related prefs section File Policies and show the label. Add a
	source-specific tab and remove music-library prefs. Move Banshee-specific
	preferences from Page to the PreferenceService.  Add ChildPages and
	IconName properties to Page class, allowing Pages to have child Pages.

	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Preferences/SourcePage.cs: New
	convenience subclass of Page that adds a source-specific page.

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Add virtual
	PreferencesPageId property that if !null will mean the
	SourcePreferencesAction will appear in the source's context menu, and will
	open the Preferences dialog to the relevant souce-specific section. Add