@@ -1,5 +1,10 @@
 2009-03-05  John Millikin  <jmillikin@gmail.com>
 
+	* src/Core/Banshee.Services/Banshee.Database/QueuedSqliteDatabase.cs:
+	Removed dead code.
+
+2009-03-05  John Millikin  <jmillikin@gmail.com>
+
 	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusIcon.cs:
 	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusButton.cs:
 	Use an animated image, rather than a button *containing* an animated
